fix cmake target use (including namespace)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ daq_oks_codegen(readout.schema.xml NAMESPACE dunedaq::appdal DEP_PKGS coredal)
 daq_add_library(ReadoutApplication.cpp NICReceiver.cpp SmartDaqApplication.cpp
   DFApplication.cpp DFOApplication.cpp TPWriterApplication.cpp
  LINK_LIBRARIES oksdbinterfaces::oksdbinterfaces okssystem::okssystem
-  logging::logging coredal oks::oks ers::ers)
+  logging::logging coredal::coredal oks::oks ers::ers)
 
 
 daq_add_python_bindings(dal_methods.cpp module.cpp LINK_LIBRARIES 
@@ -30,7 +30,7 @@ daq_add_python_bindings(dal_methods.cpp module.cpp LINK_LIBRARIES
 
 
 daq_add_application(gen_readout_modules gen_readout_modules.cxx
- TEST LINK_LIBRARIES appdal coredal oksdbinterfaces::oksdbinterfaces
+ TEST LINK_LIBRARIES appdal coredal::coredal oksdbinterfaces::oksdbinterfaces
  logging::logging)
 
 ##############################################################################
