fixed trigger application algo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@ find_package(coredal REQUIRED)
 
 #find_package(Boost COMPONENTS unit_test_framework REQUIRED)
 
-daq_oks_codegen(application.schema.xml fdmodules.schema.xml trigger.schema.xml
+daq_oks_codegen(application.schema.xml fdmodules.schema.xml 
   NAMESPACE dunedaq::appdal DEP_PKGS coredal)
 
 daq_add_library(ReadoutApplication.cpp SmartDaqApplication.cpp
