JCF: update OKS package names as described in DUNE-DAQ/daq-release#370

--- a/cmake/appdalConfig.cmake.in
+++ b/cmake/appdalConfig.cmake.in
@@ -4,10 +4,10 @@
 include(CMakeFindDependencyMacro)
 
 find_dependency(okssystem)
-find_dependency(genconfig)
+find_dependency(oksdalgen)
 find_dependency(ers)
 find_dependency(logging)
-find_dependency(oksdbinterfaces)
+find_dependency(conffwk)
 find_dependency(oks)
 find_dependency(coredal)
 
